# universal-deploy

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  git.rs  main.rs
